add_definitions(${PNG_DEFINITIONS})
set(EXTRA_GUI_LIBS
    KtCore KtXml
    ${FREETYPE_LIBRARIES}
    ${X11_X11_LIB}
    ${PNG_LIBRARIES}
)

set(GUI_PUBLIC_HEADERS
    QPropertyAnimation
    QPauseAnimation
    QAnimationGroup
    QVariantAnimation
    QSequentialAnimationGroup
    QParallelAnimationGroup
    QAbstractAnimation
    QAbstractButton
    QAbstractItemDelegate
    QAbstractItemView
    QAbstractPageSetupDialog
    QAbstractPrintDialog
    QAbstractProxyModel
    QAbstractScrollArea
    QAbstractSlider
    QAbstractSpinBox
    QAbstractTextDocumentLayout
    QAccessible
    QAccessibleBridge
    QAccessibleObject
    QAccessiblePlugin
    QAccessibleWidget
    QAction
    QActionGroup
    QApplication
    QBitmap
    QBoxLayout
    QBrush
    QButtonGroup
    QCalendarWidget
    QCheckBox
    QCleanlooksStyle
    QClipboard
    QColor
    QColorDialog
    QColormap
    QColumnView
    QComboBox
    QCommandLinkButton
    QCommonStyle
    QCompleter
    QCursor
    QDataWidgetMapper
    QDateTimeEdit
    QDesktopWidget
    QDial
    QDialog
    QDialogButtonBox
    QDirModel
    QDockWidget
    QDrag
    QErrorMessage
    QFileDialog
    QFileIconProvider
    QFileSystemModel
    QFocusFrame
    QFont
    QFontComboBox
    QFontDatabase
    QFontDialog
    QFontInfo
    QFontMetrics
    QFormLayout
    QFrame
    QGenericMatrix
    QGraphicsAnchorLayout
    QGraphicsEffect
    QGraphicsGridLayout
    QGraphicsItem
    QGraphicsItemAnimation
    QGraphicsLayout
    QGraphicsLayoutItem
    QGraphicsLinearLayout
    QGraphicsProxyWidget
    QGraphicsScene
    QGraphicsSceneEvent
    QGraphicsView
    QGraphicsWidget
    QGridLayout
    QGroupBox
    QHeaderView
    QIcon
    QIconEngine
    QIconEnginePlugin
    QIdentityProxyModel
    QImage
    QImageIOHandler
    QImageReader
    QImageWriter
    QInputDialog
    QItemDelegate
    QItemEditorFactory
    QItemSelectionModel
    QKeySequence
    QLabel
    QLayout
    QLayoutItem
    QLCDNumber
    QLineEdit
    QListView
    QListWidget
    QMainWindow
    QMatrix
    QMatrix4x4
    QMdiArea
    QMdiSubWindow
    QMenu
    QMenuBar
    QMotifStyle
    QMovie
    QPageSetupDialog
    QPaintDevice
    QPaintEngine
    QPainter
    QPainterPath
    QPalette
    QPen
    QPixmap
    QPixmapCache
    QPlainTextEdit
    QPlastiqueStyle
    QPolygon
    QPrintDialog
    QPrintEngine
    QPrinter
    QPrinterInfo
    QPrintPreviewDialog
    QPrintPreviewWidget
    QProgressBar
    QProgressDialog
    QProxyModel
    QProxyStyle
    QPushButton
    QQuaternion
    QRadioButton
    QRegion
    QRgb
    QRubberBand
    QScrollArea
    QScrollBar
    QSessionManager
    QShortcut
    QSizeGrip
    QSizePolicy
    QSlider
    QSortFilterProxyModel
    QSpinBox
    QSplashScreen
    QSplitter
    QStackedLayout
    QStackedWidget
    QStandardItemModel
    QStaticText
    QStatusBar
    QStringListModel
    QStyle
    QStyledItemDelegate
    QStyleFactory
    QStyleOption
    QStylePainter
    QStylePlugin
    QSyntaxHighlighter
    QSystemTrayIcon
    QTabBar
    QTableView
    QTableWidget
    QTabWidget
    QTextBrowser
    QTextCursor
    QTextDocument
    QTextDocumentFragment
    QTextDocumentWriter
    QTextEdit
    QTextFormat
    QTextLayout
    QTextList
    QTextObject
    QTextOption
    QTextTable
    QToolBar
    QToolBox
    QToolButton
    QToolTip
    QTransform
    QTreeView
    QTreeWidget
    QTreeWidgetItemIterator
    QUndoGroup
    QUndoStack
    QUndoView
    QValidator
    QVector2D
    QVector3D
    QVector4D
    QWhatsThis
    QWidget
    QMessageBox
    QWidgetAction
    QWindowsStyle
    QWizard
    QWorkspace
    QGuiPlatformPlugin
)

include_directories(
    ${CMAKE_BINARY_DIR}/include
    ${CMAKE_BINARY_DIR}/privateinclude
    ${CMAKE_BINARY_DIR}/include/QtCore
    ${CMAKE_BINARY_DIR}/include/QtXml
    ${CMAKE_BINARY_DIR}/include/QtGui
    ${CMAKE_SOURCE_DIR}/src/3rdparty/harfbuzz/src
    ${FREETYPE_INCLUDE_DIRS}
    ${X11_INCLUDE_DIR}
    ${PNG_INCLUDE_DIRS}
)

set(GUI_HEADERS
    ${CMAKE_CURRENT_SOURCE_DIR}/animation/qabstractanimation.h
    ${CMAKE_CURRENT_SOURCE_DIR}/animation/qabstractanimation_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/animation/qvariantanimation.h
    ${CMAKE_CURRENT_SOURCE_DIR}/animation/qvariantanimation_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/animation/qpropertyanimation.h
    ${CMAKE_CURRENT_SOURCE_DIR}/animation/qpropertyanimation_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/animation/qanimationgroup.h
    ${CMAKE_CURRENT_SOURCE_DIR}/animation/qanimationgroup_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/animation/qsequentialanimationgroup.h
    ${CMAKE_CURRENT_SOURCE_DIR}/animation/qsequentialanimationgroup_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/animation/qparallelanimationgroup.h
    ${CMAKE_CURRENT_SOURCE_DIR}/animation/qparallelanimationgroup_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/animation/qpauseanimation.h
    ${CMAKE_CURRENT_SOURCE_DIR}/dialogs/qabstractprintdialog.h
    ${CMAKE_CURRENT_SOURCE_DIR}/dialogs/qabstractprintdialog_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/dialogs/qabstractpagesetupdialog.h
    ${CMAKE_CURRENT_SOURCE_DIR}/dialogs/qabstractpagesetupdialog_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/dialogs/qcolordialog.h
    ${CMAKE_CURRENT_SOURCE_DIR}/dialogs/qcolordialog_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/dialogs/qfscompleter_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/dialogs/qdialog.h
    ${CMAKE_CURRENT_SOURCE_DIR}/dialogs/qdialog_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/dialogs/qerrormessage.h
    ${CMAKE_CURRENT_SOURCE_DIR}/dialogs/qfiledialog.h
    ${CMAKE_CURRENT_SOURCE_DIR}/dialogs/qfiledialog_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/dialogs/qfontdialog.h
    ${CMAKE_CURRENT_SOURCE_DIR}/dialogs/qfontdialog_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/dialogs/qinputdialog.h
    ${CMAKE_CURRENT_SOURCE_DIR}/dialogs/qmessagebox.h
    ${CMAKE_CURRENT_SOURCE_DIR}/dialogs/qpagesetupdialog.h
    ${CMAKE_CURRENT_SOURCE_DIR}/dialogs/qpagesetupdialog_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/dialogs/qpagesetupdialog_unix_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/dialogs/qprintdialog.h
    ${CMAKE_CURRENT_SOURCE_DIR}/dialogs/qprintdialog_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/dialogs/qprogressdialog.h
    ${CMAKE_CURRENT_SOURCE_DIR}/dialogs/qsidebar_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/dialogs/qfilesystemmodel.h
    ${CMAKE_CURRENT_SOURCE_DIR}/dialogs/qfilesystemmodel_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/dialogs/qfileinfogatherer_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/dialogs/qwizard.h
    ${CMAKE_CURRENT_SOURCE_DIR}/dialogs/qprintpreviewdialog.h
    ${CMAKE_CURRENT_SOURCE_DIR}/effects/qgraphicseffect.h
    ${CMAKE_CURRENT_SOURCE_DIR}/effects/qgraphicseffect_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/graphicsview/qgraphicsgridlayout.h
    ${CMAKE_CURRENT_SOURCE_DIR}/graphicsview/qgraphicsitem.h
    ${CMAKE_CURRENT_SOURCE_DIR}/graphicsview/qgraphicsitem_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/graphicsview/qgraphicsitemanimation.h
    ${CMAKE_CURRENT_SOURCE_DIR}/graphicsview/qgraphicslayout.h
    ${CMAKE_CURRENT_SOURCE_DIR}/graphicsview/qgraphicslayout_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/graphicsview/qgraphicslayoutitem.h
    ${CMAKE_CURRENT_SOURCE_DIR}/graphicsview/qgraphicslayoutitem_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/graphicsview/qgraphicslinearlayout.h
    ${CMAKE_CURRENT_SOURCE_DIR}/graphicsview/qgraphicsproxywidget.h
    ${CMAKE_CURRENT_SOURCE_DIR}/graphicsview/qgraphicsproxywidget_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/graphicsview/qgraphicsscene.h
    ${CMAKE_CURRENT_SOURCE_DIR}/graphicsview/qgraphicsscene_bsp_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/graphicsview/qgraphicsscene_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/graphicsview/qgraphicsscenebsptreeindex_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/graphicsview/qgraphicssceneevent.h
    ${CMAKE_CURRENT_SOURCE_DIR}/graphicsview/qgraphicssceneindex_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/graphicsview/qgraphicsscenelinearindex_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/graphicsview/qgraphicstransform.h
    ${CMAKE_CURRENT_SOURCE_DIR}/graphicsview/qgraphicstransform_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/graphicsview/qgraphicsview.h
    ${CMAKE_CURRENT_SOURCE_DIR}/graphicsview/qgraphicsview_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/graphicsview/qgraphicswidget.h
    ${CMAKE_CURRENT_SOURCE_DIR}/graphicsview/qgraphicswidget_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/graphicsview/qgridlayoutengine_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/graphicsview/qgraph_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/graphicsview/qsimplex_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/graphicsview/qgraphicsanchorlayout_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/graphicsview/qgraphicsanchorlayout.h
    ${CMAKE_CURRENT_SOURCE_DIR}/image/qbitmap.h
    ${CMAKE_CURRENT_SOURCE_DIR}/image/qicon.h
    ${CMAKE_CURRENT_SOURCE_DIR}/image/qicon_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/image/qiconloader_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/image/qiconengine.h
    ${CMAKE_CURRENT_SOURCE_DIR}/image/qiconengineplugin.h
    ${CMAKE_CURRENT_SOURCE_DIR}/image/qimage.h
    ${CMAKE_CURRENT_SOURCE_DIR}/image/qimage_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/image/qimageiohandler.h
    ${CMAKE_CURRENT_SOURCE_DIR}/image/qimagereader.h
    ${CMAKE_CURRENT_SOURCE_DIR}/image/qimagewriter.h
    ${CMAKE_CURRENT_SOURCE_DIR}/image/qmovie.h
    ${CMAKE_CURRENT_SOURCE_DIR}/image/qpixmap.h
    ${CMAKE_CURRENT_SOURCE_DIR}/image/qpixmap_raster_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/image/qpixmap_x11_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/image/qpixmapcache.h
    ${CMAKE_CURRENT_SOURCE_DIR}/image/qpixmapdata_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/image/qpixmapfilter_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/image/qbmphandler_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/image/qppmhandler_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/image/qxbmhandler_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/image/qxpmhandler_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/image/qpnghandler_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qabstractitemview.h
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qabstractitemview_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qheaderview.h
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qheaderview_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qidentityproxymodel.h
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qlistview.h
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qlistview_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qbsptree_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qtableview.h
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qtableview_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qtreeview.h
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qtreeview_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qabstractitemdelegate.h
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qitemdelegate.h
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qitemselectionmodel.h
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qitemselectionmodel_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qdirmodel.h
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qlistwidget.h
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qlistwidget_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qtablewidget.h
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qtablewidget_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qtreewidget.h
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qtreewidget_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qwidgetitemdata_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qproxymodel.h
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qproxymodel_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qabstractproxymodel.h
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qabstractproxymodel_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qsortfilterproxymodel.h
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qitemeditorfactory.h
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qitemeditorfactory_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qstandarditemmodel.h
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qstandarditemmodel_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qstringlistmodel.h
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qtreewidgetitemiterator.h
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qtreewidgetitemiterator_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qdatawidgetmapper.h
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qfileiconprovider.h
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qcolumnviewgrip_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qcolumnview.h 
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qcolumnview_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qstyleditemdelegate.h
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qaction.h
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qaction_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qactiongroup.h
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qapplication.h
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qapplication_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qboxlayout.h
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qclipboard.h
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qcursor.h
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qcursor_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qdesktopwidget.h
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qdrag.h
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qdnd_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qevent.h
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qevent_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qformlayout.h
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qgridlayout.h
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qkeysequence.h
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qkeysequence_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qlayout.h
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qlayout_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qlayoutengine_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qlayoutitem.h
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qsessionmanager.h
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qshortcut.h
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qshortcutmap_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qsizepolicy.h
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qpalette.h
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qstackedlayout.h
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qtooltip.h
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qwhatsthis.h
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qwidget.h
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qwidget_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qwidgetaction.h
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qwidgetaction_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qwindowdefs.h
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qkeymapper_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qguiplatformplugin.h
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qt_x11_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qx11embed_x11.h
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qx11info_x11.h
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qeventdispatcher_x11_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/math3d/qgenericmatrix.h
    ${CMAKE_CURRENT_SOURCE_DIR}/math3d/qmatrix4x4.h
    ${CMAKE_CURRENT_SOURCE_DIR}/math3d/qquaternion.h
    ${CMAKE_CURRENT_SOURCE_DIR}/math3d/qvector2d.h
    ${CMAKE_CURRENT_SOURCE_DIR}/math3d/qvector3d.h
    ${CMAKE_CURRENT_SOURCE_DIR}/math3d/qvector4d.h
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qbezier_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qbrush.h
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qcolor.h
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qcolor_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qcolormap.h
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qcssutil_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qdrawutil.h
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qmatrix.h
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qmemrotate_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qoutlinemapper_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qpaintdevice.h
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qpaintengine.h
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qpaintengine_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qpaintengine_alpha_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qpaintengine_preview_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qpaintengineex_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qpainter.h
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qpainter_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qpainterpath.h
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qpainterpath_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qvectorpath_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qpathclipper_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qpdf_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qpen.h
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qpolygon.h
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qpolygonclipper_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qprintengine.h
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qprintengine_pdf_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qprintengine_ps_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qprinter.h
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qprinter_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qprinterinfo.h
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qprinterinfo_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qrasterizer_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qregion.h
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qstroker_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qstylepainter.h
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qtessellator_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qtextureglyphcache_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qtransform.h
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qwindowsurface_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qpaintengine_raster_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qdrawhelper_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qrasterdefs_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qbackingstore_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qdatabuffer_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qpen_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qfixed_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qwindowsurface_raster_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qrgb.h
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qprinterinfo_unix_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qpaintengine_x11_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/styles/qstyle.h
    ${CMAKE_CURRENT_SOURCE_DIR}/styles/qstyle_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/styles/qstylefactory.h
    ${CMAKE_CURRENT_SOURCE_DIR}/styles/qstyleoption.h
    ${CMAKE_CURRENT_SOURCE_DIR}/styles/qstyleplugin.h
    ${CMAKE_CURRENT_SOURCE_DIR}/styles/qcommonstyle.h
    ${CMAKE_CURRENT_SOURCE_DIR}/styles/qcommonstyle_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/styles/qstylehelper_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/styles/qproxystyle.h
    ${CMAKE_CURRENT_SOURCE_DIR}/styles/qproxystyle_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/styles/qstylesheetstyle_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/styles/qplastiquestyle.h
    ${CMAKE_CURRENT_SOURCE_DIR}/styles/qmotifstyle.h
    ${CMAKE_CURRENT_SOURCE_DIR}/styles/qwindowsstyle.h
    ${CMAKE_CURRENT_SOURCE_DIR}/styles/qcleanlooksstyle.h
    ${CMAKE_CURRENT_SOURCE_DIR}/styles/qcleanlooksstyle_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qfont.h
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qfontdatabase.h
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qfontengine_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qfontengineglyphcache_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qfontinfo.h
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qfontmetrics.h
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qfont_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qfontsubset_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qtextcontrol_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qtextcontrol_p_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qtextengine_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qtextlayout.h
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qtextformat.h
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qtextformat_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qtextobject.h
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qtextobject_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qtextoption.h
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qfragmentmap_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qtextdocument.h
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qtextdocument_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qtexthtmlparser_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qabstracttextdocumentlayout.h
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qabstracttextdocumentlayout_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qtextdocumentlayout_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qtextcursor.h
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qtextcursor_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qtextdocumentfragment.h
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qtextdocumentfragment_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qtextimagehandler_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qtexttable.h
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qtextlist.h
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qsyntaxhighlighter.h
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qtextdocumentwriter.h
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qcssparser_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qtexttable_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qstatictext_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qstatictext.h
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qharfbuzz_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qfontengine_ft_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qfontengine_x11_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qfontdatabase_x11_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qunicodetables_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/util/qsystemtrayicon.h
    ${CMAKE_CURRENT_SOURCE_DIR}/util/qcompleter.h
    ${CMAKE_CURRENT_SOURCE_DIR}/util/qcompleter_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/util/qsystemtrayicon_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/util/qundogroup.h
    ${CMAKE_CURRENT_SOURCE_DIR}/util/qundostack.h
    ${CMAKE_CURRENT_SOURCE_DIR}/util/qundostack_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/util/qundoview.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qbuttongroup.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qabstractbutton.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qabstractbutton_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qabstractslider.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qabstractslider_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qabstractspinbox.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qabstractspinbox_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qcalendartextnavigator_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qcalendarwidget.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qcheckbox.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qcombobox.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qcombobox_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qcommandlinkbutton.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qdatetimeedit.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qdatetimeedit_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qdial.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qdialogbuttonbox.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qdockwidget.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qdockwidget_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qdockarealayout_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qeffects_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qfontcombobox.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qframe.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qframe_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qgroupbox.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qlabel.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qlabel_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qlcdnumber.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qlineedit.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qlineedit_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qlinecontrol_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qmainwindow.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qmainwindowlayout_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qmdiarea.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qmdiarea_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qmdisubwindow.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qmdisubwindow_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qmenu.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qmenu_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qmenubar.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qmenubar_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qprogressbar.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qpushbutton.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qpushbutton_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qradiobutton.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qrubberband.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qscrollbar.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qscrollarea_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qsizegrip.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qslider.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qspinbox.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qsplashscreen.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qsplitter.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qsplitter_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qstackedwidget.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qstatusbar.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qtabbar.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qtabbar_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qtabwidget.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qtextedit.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qtextedit_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qtextbrowser.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qtoolbar.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qtoolbar_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qtoolbarlayout_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qtoolbarextension_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qtoolbarseparator_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qtoolbox.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qtoolbutton.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qvalidator.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qabstractscrollarea.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qabstractscrollarea_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qwidgetresizehandler_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qfocusframe.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qscrollarea.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qworkspace.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qwidgetanimator_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qtoolbararealayout_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qplaintextedit.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qplaintextedit_p.h
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qprintpreviewwidget.h
    ${CMAKE_CURRENT_SOURCE_DIR}/qguicommon_p.h
)

set(GUI_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/animation/qguivariantanimation.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/animation/qabstractanimation.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/animation/qvariantanimation.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/animation/qpropertyanimation.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/animation/qanimationgroup.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/animation/qsequentialanimationgroup.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/animation/qparallelanimationgroup.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/animation/qpauseanimation.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/dialogs/qabstractprintdialog.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/dialogs/qabstractpagesetupdialog.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/dialogs/qcolordialog.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/dialogs/qdialog.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/dialogs/qerrormessage.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/dialogs/qfiledialog.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/dialogs/qfontdialog.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/dialogs/qinputdialog.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/dialogs/qmessagebox.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/dialogs/qprogressdialog.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/dialogs/qsidebar.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/dialogs/qfilesystemmodel.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/dialogs/qfileinfogatherer.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/dialogs/qpagesetupdialog.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/dialogs/qwizard.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/dialogs/qprintpreviewdialog.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/dialogs/qfiledialog.ui
    ${CMAKE_CURRENT_SOURCE_DIR}/dialogs/qpagesetupwidget.ui
    ${CMAKE_CURRENT_SOURCE_DIR}/dialogs/qprintdialog_unix.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/dialogs/qpagesetupdialog_unix.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/dialogs/qprintsettingsoutput.ui
    ${CMAKE_CURRENT_SOURCE_DIR}/dialogs/qprintwidget.ui
    ${CMAKE_CURRENT_SOURCE_DIR}/dialogs/qprintpropertieswidget.ui
    ${CMAKE_CURRENT_SOURCE_DIR}/dialogs/qprintdialog.qrc
    ${CMAKE_CURRENT_SOURCE_DIR}/dialogs/qmessagebox.qrc
    ${CMAKE_CURRENT_SOURCE_DIR}/effects/qgraphicseffect.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/graphicsview/qgraphicsgridlayout.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/graphicsview/qgraphicsitem.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/graphicsview/qgraphicsitemanimation.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/graphicsview/qgraphicslayout.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/graphicsview/qgraphicslayout_p.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/graphicsview/qgraphicslayoutitem.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/graphicsview/qgraphicslinearlayout.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/graphicsview/qgraphicsproxywidget.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/graphicsview/qgraphicsscene.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/graphicsview/qgraphicsscene_bsp.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/graphicsview/qgraphicsscenebsptreeindex.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/graphicsview/qgraphicssceneevent.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/graphicsview/qgraphicssceneindex.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/graphicsview/qgraphicsscenelinearindex.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/graphicsview/qgraphicstransform.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/graphicsview/qgraphicsview.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/graphicsview/qgraphicswidget.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/graphicsview/qgraphicswidget_p.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/graphicsview/qgridlayoutengine.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/graphicsview/qsimplex_p.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/graphicsview/qgraphicsanchorlayout_p.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/graphicsview/qgraphicsanchorlayout.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/image/qbitmap.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/image/qicon.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/image/qiconloader.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/image/qimage.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/image/qimageiohandler.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/image/qimagereader.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/image/qimagewriter.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/image/qpixmap.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/image/qpixmapcache.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/image/qpixmapdata.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/image/qpixmapfilter.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/image/qiconengine.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/image/qiconengineplugin.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/image/qmovie.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/image/qpixmap_raster.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/image/qpixmap_x11.cpp
    # Built-in image format support
    ${CMAKE_CURRENT_SOURCE_DIR}/image/qbmphandler.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/image/qppmhandler.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/image/qxbmhandler.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/image/qxpmhandler.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/image/qpnghandler.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qabstractitemview.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qheaderview.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qidentityproxymodel.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qlistview.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qbsptree.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qtableview.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qtreeview.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qabstractitemdelegate.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qitemdelegate.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qitemselectionmodel.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qdirmodel.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qlistwidget.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qtablewidget.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qtreewidget.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qproxymodel.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qabstractproxymodel.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qsortfilterproxymodel.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qitemeditorfactory.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qstandarditemmodel.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qstringlistmodel.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qtreewidgetitemiterator.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qdatawidgetmapper.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qfileiconprovider.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qcolumnview.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qcolumnviewgrip.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qstyleditemdelegate.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qaction.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qactiongroup.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qapplication.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qboxlayout.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qclipboard.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qcursor.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qdrag.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qdnd.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qevent.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qformlayout.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qgridlayout.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qkeysequence.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qlayout.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qlayoutengine.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qlayoutitem.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qpalette.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qshortcut.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qshortcutmap.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qstackedlayout.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qtooltip.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qguivariant.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qwhatsthis.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qwidget.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qwidgetaction.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qkeymapper.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qdesktopwidget.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qguiplatformplugin.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qapplication_x11.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qclipboard_x11.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qcursor_x11.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qdnd_x11.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qdesktopwidget_x11.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qwidget_x11.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qx11embed_x11.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qx11info_x11.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qkeymapper_x11.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qeventdispatcher_x11.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/math3d/qgenericmatrix.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/math3d/qmatrix4x4.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/math3d/qquaternion.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/math3d/qvector2d.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/math3d/qvector3d.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/math3d/qvector4d.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qbezier.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qbrush.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qcolor.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qcolor_p.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qcssutil.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qdrawutil.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qmatrix.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qoutlinemapper.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qpaintdevice.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qpaintengine.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qpaintengine_alpha.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qpaintengine_preview.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qpaintengineex.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qpainter.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qpainterpath.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qpathclipper.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qpdf.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qpen.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qpolygon.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qprintengine_pdf.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qprintengine_ps.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qprinter.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qprinterinfo.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qrasterizer.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qregion.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qstroker.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qstylepainter.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qtessellator.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qtextureglyphcache.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qtransform.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qwindowsurface.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qpaintengine_raster.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qdrawhelper.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qbackingstore.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qwindowsurface_raster.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qprinterinfo_unix.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qgrayraster.c
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qcolormap_x11.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qpaintengine_x11.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/styles/qstyle.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/styles/qstylefactory.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/styles/qstyleoption.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/styles/qstyleplugin.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/styles/qstylehelper.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/styles/qcommonstyle.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/styles/qproxystyle.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/styles/qstylesheetstyle.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/styles/qstylesheetstyle_default.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/styles/qplastiquestyle.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/styles/qmotifstyle.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/styles/qwindowsstyle.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/styles/qcleanlooksstyle.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/styles/qstyle.qrc
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qfont.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qfontengine.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qfontengine_ft.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qfontsubset.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qfontmetrics.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qfontdatabase.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qtextcontrol.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qtextengine.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qtextlayout.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qtextformat.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qtextobject.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qtextoption.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qtextdocument.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qtextdocument_p.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qtexthtmlparser.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qabstracttextdocumentlayout.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qtextdocumentlayout.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qtextcursor.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qtextdocumentfragment.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qtextimagehandler.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qtexttable.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qtextlist.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qtextdocumentwriter.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qsyntaxhighlighter.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qcssparser.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qstatictext.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qfont_x11.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qfontengine_x11.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qunicodetables.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/util/qsystemtrayicon.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/util/qcompleter.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/util/qundogroup.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/util/qundostack.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/util/qundoview.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/util/qsystemtrayicon_x11.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qabstractbutton.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qabstractslider.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qabstractspinbox.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qcalendarwidget.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qcheckbox.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qcombobox.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qcommandlinkbutton.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qdatetimeedit.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qdial.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qdialogbuttonbox.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qdockwidget.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qdockarealayout.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qeffects.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qfontcombobox.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qframe.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qgroupbox.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qlabel.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qlcdnumber.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qlineedit_p.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qlineedit.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qlinecontrol.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qmainwindow.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qmainwindowlayout.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qmdiarea.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qmdisubwindow.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qmenu.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qmenubar.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qprogressbar.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qpushbutton.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qradiobutton.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qrubberband.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qscrollbar.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qsizegrip.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qslider.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qspinbox.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qsplashscreen.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qsplitter.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qstackedwidget.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qstatusbar.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qtabbar.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qtabwidget.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qtextedit.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qtextbrowser.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qtoolbar.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qtoolbarlayout.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qtoolbarextension.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qtoolbarseparator.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qtoolbox.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qtoolbutton.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qvalidator.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qabstractscrollarea.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qwidgetresizehandler.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qfocusframe.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qscrollarea.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qworkspace.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qwidgetanimator.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qtoolbararealayout.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qplaintextedit.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qprintpreviewwidget.cpp
    ${CMAKE_SOURCE_DIR}/src/3rdparty/harfbuzz/src/harfbuzz-buffer.c
    ${CMAKE_SOURCE_DIR}/src/3rdparty/harfbuzz/src/harfbuzz-gdef.c
    ${CMAKE_SOURCE_DIR}/src/3rdparty/harfbuzz/src/harfbuzz-gsub.c
    ${CMAKE_SOURCE_DIR}/src/3rdparty/harfbuzz/src/harfbuzz-gpos.c
    ${CMAKE_SOURCE_DIR}/src/3rdparty/harfbuzz/src/harfbuzz-impl.c
    ${CMAKE_SOURCE_DIR}/src/3rdparty/harfbuzz/src/harfbuzz-open.c
    ${CMAKE_SOURCE_DIR}/src/3rdparty/harfbuzz/src/harfbuzz-stream.c
    ${CMAKE_SOURCE_DIR}/src/3rdparty/harfbuzz/src/harfbuzz-shaper-all.cpp
    ${CMAKE_SOURCE_DIR}/src/gui/text/qharfbuzz.cpp
)

# keep in sync with the top-level CMake file, only libraries setup is needed here
foreach(x11ext Xshape Xinerama Xrandr Xrender Xfixes Xcursor Xext SM ICE)
    if(X11_${x11ext}_FOUND AND X11_${x11ext}_LIB)
        set(EXTRA_GUI_LIBS
            ${EXTRA_GUI_LIBS}
            ${X11_${x11ext}_LIB}
        )
    endif()
endforeach()

if(WITH_CUPS AND CUPS_FOUND)
    set(GUI_HEADERS
        ${GUI_HEADERS}
        ${CMAKE_CURRENT_SOURCE_DIR}/painting/qcups_p.h
    )
    set(GUI_SOURCES
        ${GUI_SOURCES}
        ${CMAKE_CURRENT_SOURCE_DIR}/painting/qcups.cpp
    )
    set(EXTRA_GUI_LIBS
        ${EXTRA_GUI_LIBS}
        ${CUPS_LIBRARIES}
    )
    include_directories(${CUPS_INCLUDE_DIR})
endif()

if(WITH_FONTCONFIG AND FONTCONFIG_FOUND)
    set(EXTRA_GUI_LIBS
        ${EXTRA_GUI_LIBS}
        ${FONTCONFIG_LIBRARIES}
    )
    include_directories(${FONTCONFIG_INCLUDES})
    add_definitions(${FONTCONFIG_DEFINITIONS})
endif()

if(WITH_ACCESSIBILITY)
    set(GUI_HEADERS
        ${GUI_HEADERS}
        ${CMAKE_CURRENT_SOURCE_DIR}/accessible/qaccessible.h
        ${CMAKE_CURRENT_SOURCE_DIR}/accessible/qaccessible2.h
        ${CMAKE_CURRENT_SOURCE_DIR}/accessible/qaccessibleobject.h
        ${CMAKE_CURRENT_SOURCE_DIR}/accessible/qaccessiblewidget.h
        ${CMAKE_CURRENT_SOURCE_DIR}/accessible/qaccessibleplugin.h
        ${CMAKE_CURRENT_SOURCE_DIR}/accessible/qaccessiblebridge.h
    )

    set(GUI_SOURCES
        ${GUI_SOURCES}
        ${CMAKE_CURRENT_SOURCE_DIR}/accessible/qaccessible.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/accessible/qaccessible2.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/accessible/qaccessibleobject.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/accessible/qaccessiblewidget.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/accessible/qaccessibleplugin.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/accessible/qaccessible_unix.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/accessible/qaccessiblebridge.cpp
    )
endif()

# anything that includes qt_x11_p.h is known to break unity build
katie_unity_exclude(
    ${CMAKE_CURRENT_SOURCE_DIR}/dialogs/qdialog.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/dialogs/qpagesetupdialog_unix.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/dialogs/qprintdialog_unix.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/graphicsview/qgraphicsitem.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/graphicsview/qgraphicsscene.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/graphicsview/qgraphicsview.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/image/qbitmap.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/image/qpixmap.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/image/qpixmap_x11.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/image/qpixmapfilter.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/itemviews/qitemeditorfactory.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qapplication.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qapplication_x11.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qclipboard_x11.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qcursor_x11.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qdesktopwidget_x11.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qdnd_x11.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qeventdispatcher_x11.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qkeymapper_x11.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qwidget.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qwidget_x11.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qx11embed_x11.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/qx11info_x11.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qbackingstore.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qcolor.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qcolormap_x11.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qpaintengine_x11.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qregion_x11.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/painting/qwindowsurface_raster.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qfont.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qfontengine_x11.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qfont_x11.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/text/qtextformat.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/util/qsystemtrayicon_x11.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qsizegrip.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/widgets/qtextedit.cpp
    ${CMAKE_SOURCE_DIR}/src/3rdparty/harfbuzz/src/harfbuzz-shaper-all.cpp
)

katie_generate_misc("${GUI_HEADERS}" QtGui)
katie_generate_public("${GUI_PUBLIC_HEADERS}" QtGui)
katie_generate_package(KtGui "KtCore KtXml")
katie_setup_target(KtGui ${GUI_SOURCES} ${GUI_HEADERS})

add_library(KtGui ${KATIE_TYPE} ${KtGui_SOURCES})
target_link_libraries(KtGui PRIVATE ${EXTRA_GUI_LIBS})
set_target_properties(KtGui PROPERTIES
    VERSION ${KATIE_MAJOR}.${KATIE_MINOR}
    SOVERSION ${KATIE_VERSION}
    EXPORT_NAME Gui
)

install(
    TARGETS KtGui
    EXPORT KatieTargets ${INSTALL_TARGETS_DEFAULT_ARGS}
    DESTINATION ${KATIE_LIBRARIES_PATH}
    COMPONENT Runtime
)

install(
    DIRECTORY ${CMAKE_BINARY_DIR}/include/QtGui
    DESTINATION ${KATIE_HEADERS_PATH}
    COMPONENT Devel
)

katie_optimize_headers(${KATIE_HEADERS_PATH}/QtGui)
